接口调试： 地址相关接口

--- a/library_res/src/main/res/values/config_interge.xml
+++ b/library_res/src/main/res/values/config_interge.xml
@@ -8,4 +8,6 @@
     <integer name="config_freebuy_displayquants">4</integer>
     <!--商品的最大购买限制-->
     <integer name="config_goodsquantity_maxlimit">200</integer>
+    <!--默认地址-->
+    <integer name="config_def_address">1</integer>
 </resources>
