--- a/module_order/src/main/res/layout/order_item_receiveraddr.xml
+++ b/module_order/src/main/res/layout/order_item_receiveraddr.xml
@@ -1,141 +1,143 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<layout
+<android.support.constraint.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools">
-    <data>
-        <variable name="viewModel" type="com.lcworld.module_order.viewmodel.ReceiverAddressItemViewModel"/>
-        <import type="com.lcworld.library_base.extension.ConvertExUtils"/>
-    </data>
+        xmlns:tools="http://schemas.android.com/tools"
+        android:background="@color/white"
+        android:layout_marginTop="@dimen/gap_size6"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
-    <android.support.constraint.ConstraintLayout
-            android:background="@color/white"
-            android:layout_marginTop="@dimen/gap_size6"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+    <android.support.constraint.Guideline
+            android:id="@+id/gline_start"
+            android:layout_width="wrap_content"
+            android:orientation="vertical"
+            android:layout_height="wrap_content"
+            app:layout_constraintGuide_begin="@dimen/gap_size17"/>
 
-        <android.support.constraint.Guideline
-                android:id="@+id/gline_start"
-                android:layout_width="wrap_content"
-                android:orientation="vertical"
-                android:layout_height="wrap_content"
-                app:layout_constraintGuide_begin="@dimen/gap_size17"/>
+    <android.support.constraint.Guideline
+            android:id="@+id/gline_end"
+            android:layout_width="wrap_content"
+            android:orientation="vertical"
+            android:layout_height="wrap_content"
+            app:layout_constraintGuide_end="@dimen/gap_size17"/>
 
-        <android.support.constraint.Guideline
-                android:id="@+id/gline_end"
-                android:layout_width="wrap_content"
-                android:orientation="vertical"
-                android:layout_height="wrap_content"
-                app:layout_constraintGuide_end="@dimen/gap_size17"/>
+    <TextView
+            android:id="@+id/tv_name"
+            android:layout_width="wrap_content"
+            android:textColor="@color/tx_colorb"
+            android:textSize="@dimen/tx_size15"
+            android:textStyle="bold"
+            android:layout_marginTop="@dimen/gap_size20"
+            android:layout_height="wrap_content"
+            app:layout_constraintStart_toStartOf="@id/gline_start"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="无语"/>
 
-        <TextView
-                android:id="@+id/tv_name"
-                android:layout_width="wrap_content"
-                android:textColor="@color/tx_colorb"
-                android:textSize="@dimen/tx_size15"
-                android:textStyle="bold"
-                android:layout_marginTop="@dimen/gap_size20"
-                android:layout_height="wrap_content"
-                app:layout_constraintStart_toStartOf="@id/gline_start"
-                app:layout_constraintTop_toTopOf="parent"
-                tools:text="无语"
-                android:text="@{viewModel.entity.name}"/>
+    <TextView
+            android:id="@+id/tv_phone"
+            android:layout_width="wrap_content"
+            android:textColor="@color/tx_colorb"
+            android:textSize="@dimen/tx_size15"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/gap_size25"
+            android:textStyle="bold"
+            app:layout_constraintBaseline_toBaselineOf="@id/tv_name"
+            app:layout_constraintStart_toEndOf="@id/tv_name"
+            tools:text="189***1111"/>
 
-        <TextView
-                android:id="@+id/tv_phone"
-                android:layout_width="wrap_content"
-                android:textColor="@color/tx_colorb"
-                android:textSize="@dimen/tx_size15"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/gap_size25"
-                android:textStyle="bold"
-                app:layout_constraintBaseline_toBaselineOf="@id/tv_name"
-                app:layout_constraintStart_toEndOf="@id/tv_name"
-                tools:text="189***1111"
-                android:text="@{ConvertExUtils.convertPhone(viewModel.entity.mobile)}"/>
+    <ImageView
+            android:id="@+id/iv_arrow"
+            android:layout_width="wrap_content"
+            android:src="@mipmap/arrow_right1"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="@+id/tv_name"
+            app:layout_constraintEnd_toEndOf="@id/gline_end"
+            app:layout_constraintTop_toTopOf="@id/tv_name"/>
 
-        <ImageView
-                android:id="@+id/iv_arrow"
-                android:layout_width="wrap_content"
-                android:src="@mipmap/arrow_right1"
-                android:layout_height="wrap_content"
-                app:layout_constraintBottom_toBottomOf="@+id/tv_name"
-                app:layout_constraintEnd_toEndOf="@id/gline_end"
-                app:layout_constraintTop_toTopOf="@id/tv_name"/>
+    <TextView
+            android:id="@+id/tv_address"
+            android:layout_marginEnd="@dimen/gap_size8"
+            android:drawablePadding="@dimen/gap_size4"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/gap_size19"
+            android:drawableStart="@mipmap/order_address"
+            android:textSize="@dimen/tx_size13"
+            android:textColor="@color/tx_colorb"
+            app:layout_constraintEnd_toStartOf="@id/iv_arrow"
+            app:layout_constraintStart_toStartOf="@id/gline_start"
+            app:layout_constraintTop_toBottomOf="@id/tv_name"
+            tools:text="地址"/>
 
-        <TextView
-                android:id="@+id/tv_address"
-                android:layout_marginEnd="@dimen/gap_size8"
-                android:drawablePadding="@dimen/gap_size4"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/gap_size19"
-                android:drawableStart="@mipmap/order_address"
-                android:textSize="@dimen/tx_size13"
-                android:textColor="@color/tx_colorb"
-                app:layout_constraintEnd_toStartOf="@id/iv_arrow"
-                app:layout_constraintStart_toStartOf="@id/gline_start"
-                app:layout_constraintTop_toBottomOf="@id/tv_name"
-                android:text="@{viewModel.entity.addr}"
-                tools:text="地址"/>
+    <View
+            android:id="@+id/line_address"
+            android:layout_width="0dp"
+            android:layout_marginTop="@dimen/gap_size16"
+            android:layout_height="1dp"
+            android:background="@color/line_colorc"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tv_address"/>
 
-        <View
-                android:id="@+id/line_address"
-                android:layout_width="0dp"
-                android:layout_marginTop="@dimen/gap_size16"
-                android:layout_height="1dp"
-                android:background="@color/line_colorc"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/tv_address"/>
+    <CheckBox
+            android:id="@+id/cbox_default"
+            android:layout_width="wrap_content"
+            android:button="@drawable/selector_cbox_a"
+            android:layout_marginTop="@dimen/gap_size13"
+            android:textSize="@dimen/tx_size13"
+            android:textColor="@color/tx_colorb"
+            android:text="@string/order_receiveraddr_default"
+            android:clickable="false"
+            android:focusable="false"
+            android:focusableInTouchMode="false"
+            android:enabled="false"
+            android:paddingStart="@dimen/gap_size7"
+            android:layout_height="wrap_content"
+            app:layout_constraintStart_toStartOf="@id/gline_start"
+            app:layout_constraintTop_toBottomOf="@id/line_address"/>
 
-        <CheckBox
-                android:id="@+id/cbox_default"
-                android:layout_width="wrap_content"
-                android:button="@drawable/selector_cbox_a"
-                android:layout_marginTop="@dimen/gap_size13"
-                android:textSize="@dimen/tx_size13"
-                android:textColor="@color/tx_colorb"
-                android:text="@string/order_receiveraddr_default"
-                android:paddingStart="@dimen/gap_size7"
-                android:checked="@{viewModel.entity.def_addr == 1}"
-                android:layout_height="wrap_content"
-                app:layout_constraintStart_toStartOf="@id/gline_start"
-                app:layout_constraintTop_toBottomOf="@id/line_address"/>
+    <View
+            android:id="@+id/view_defaul"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toBottomOf="@id/line_bottom"
+            app:layout_constraintStart_toStartOf="@id/cbox_default"
+            app:layout_constraintEnd_toEndOf="@id/cbox_default"
+            app:layout_constraintTop_toTopOf="@id/line_address"/>
 
-        <TextView
-                android:id="@+id/cbox_edit"
-                android:layout_width="wrap_content"
-                android:drawableStart="@mipmap/order_edit"
-                android:button="@drawable/selector_cbox_a"
-                android:layout_marginTop="@dimen/gap_size13"
-                android:drawablePadding="@dimen/gap_size7"
-                android:textSize="@dimen/tx_size13"
-                android:textColor="@color/tx_colorc"
-                android:text="@string/order_receiveraddr_edit"
-                android:layout_height="wrap_content"
-                app:layout_constraintEnd_toEndOf="@id/gline_end"
-                app:layout_constraintTop_toBottomOf="@id/line_address"/>
+    <TextView
+            android:id="@+id/tv_edit"
+            android:layout_width="wrap_content"
+            android:drawableStart="@mipmap/order_edit"
+            android:button="@drawable/selector_cbox_a"
+            android:layout_marginTop="@dimen/gap_size13"
+            android:drawablePadding="@dimen/gap_size7"
+            android:textSize="@dimen/tx_size13"
+            android:textColor="@color/tx_colorc"
+            android:text="@string/order_receiveraddr_edit"
+            android:layout_height="wrap_content"
+            app:layout_constraintEnd_toEndOf="@id/gline_end"
+            app:layout_constraintTop_toBottomOf="@id/line_address"/>
 
-        <View
-                android:id="@+id/line_bottom"
-                android:layout_width="0dp"
-                android:layout_marginTop="@dimen/gap_size11"
-                android:layout_height="1dp"
-                android:background="@color/line_colorc"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/cbox_default"/>
+    <View
+            android:id="@+id/line_bottom"
+            android:layout_width="0dp"
+            android:layout_marginTop="@dimen/gap_size11"
+            android:layout_height="1dp"
+            android:background="@color/line_colorc"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/cbox_default"/>
 
-        <View
-                android:id="@+id/bg_edit"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                app:layout_constraintBottom_toTopOf="@id/line_address"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"/>
+    <View
+            android:id="@+id/bg_edit"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toTopOf="@id/line_address"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"/>
 
-    </android.support.constraint.ConstraintLayout>
-</layout>
+</android.support.constraint.ConstraintLayout>
