接口调试： 引入微信、支付宝 支付相关接口调试

--- a/library_res/src/main/res/values/config_interge.xml
+++ b/library_res/src/main/res/values/config_interge.xml
@@ -10,4 +10,7 @@
     <integer name="config_goodsquantity_maxlimit">200</integer>
     <!--默认地址-->
     <integer name="config_def_address">1</integer>
+    <!--分页-->
+    <integer name="config_pageData_defaultSize">10</integer>
+    <integer name="config_pageData_MaxSize">200</integer>
 </resources>
