--- a/library_res/src/main/res/values/config_string.xml
+++ b/library_res/src/main/res/values/config_string.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    //客户端类型 APP/WAP/PC
+    //客户端类型 APP/WAP/PC/NATIVE/REACT
     <string-array name="client_type">
         <item name="type_a">APP</item>
         <item name="type_b">WAP</item>
         <item name="type_c">PC</item>
+        <item name="type_d">NATIVE</item>
+        <item name="type_e">REACT</item>
     </string-array>
 
     //页面类型 HOME（首页）/ MEMBER（会员专区）
@@ -33,11 +35,24 @@
         <item>recommend</item>
     </string-array>
 
-    //商品类型NORMAL普通POINT积分SHANGBI商币
+    //商品类型NORMAL普通POINT积分SHANGBI商币PINTUAN拼团
     <string-array name="goods_type">
         <item>normal</item>
         <item>point</item>
         <item>shangbi</item>
         <item>pintuan</item>
     </string-array>
+
+    //支付模式，正常normal， 二维码 ar,枚举类型PaymentPatternEnum
+    <string-array name="pay_mode">
+        <item>normal</item>
+        <item>ar</item>
+    </string-array>
+
+    //trade_type trade / order
+    <string-array name="trade_type">
+        <item>trade</item>
+        <item>order</item>
+    </string-array>
+
 </resources>
