接口调试： 如意赚生成订单流程修改 商币支付接口完成 普通商品支付接口调试

--- a/library_res/src/main/res/values/config_string.xml
+++ b/library_res/src/main/res/values/config_string.xml
@@ -55,4 +55,10 @@
         <item>order</item>
     </string-array>
 
+    //payment_plugin_id
+    <string-array name="payment_plugin_id">
+        <item>shangbiPlugin</item>
+        <item>alipayDirectPlugin</item>
+        <item>weixinPayPlugin</item>
+    </string-array>
 </resources>
